# gltutorial

./: CMakeLists.txt
include/glad/: glad.h
lib/: libglfw.so.3.2
res/shaders/: CubeFS.fs  CubeVS.vs  LightSourceFS.fs  MaterialFS.fs  MaterialVS.vs
src/: LightProperties.h  Shader.cpp  Shader.h  Utils.cpp  Utils.h  main.cpp
src/application/: Camera.h  GLApplication.cpp  GLApplication.h
src/material/: Material.cpp  Material.h
src/objects/: Cube.cpp  Cube.h  LightSource.cpp  LightSource.h  RenderObject.h  Sphere.cpp  Sphere.h
